--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.islavstan.rxgithub.MainActivity">
+    tools:context="com.islavstan.rxgithub.combined.MainActivity">
 
   <TextView
       android:layout_width="wrap_content"
@@ -89,5 +89,11 @@
         android:layout_height="wrap_content"
         android:text="public_gists"/>
 
+
+  <Button
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="next activity"
+      android:id="@+id/nextActivityBtn"/>
 
 </LinearLayout>
